# rose-title-changer

./: Cargo.toml  LICENSE  README.md  build.rs  resources.rc
src/: helpers.rs  main.rs  process_memory.rs  windows_api.rs
