[package]
name = "rust-rose-title-changer"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.27.7"
skidscan = "2.0.1"
widestring = "1.0.2"
eframe = "0.20.1"
egui_extras = "0.20.0"
chrono = "0.4.23"
os_info = { version = "3", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "psapi", "tlhelp32", "memoryapi", "handleapi", "impl-default"] }